--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "it-spa",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "it-spa.js",
     "scripts": {
         "predeploy": "npm run build",
         "start:db": "json-server --watch database.json",
