--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "devDependencies": {
+    "dependencies": {
         "@parcel/transformer-sass": "^2.2.1",
         "json-server": "^0.15.1",
         "parcel": "^2.2.1",
-        "sass": "^1.49.0"
-    },
-    "dependencies": {
+        "sass": "^1.49.0",
         "bootstrap": "^5.1.3",
         "jquery": "^3.6.0"
     }
