--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "license": "ISC",
     "dependencies": {
         "@parcel/transformer-sass": "^2.2.1",
-        "json-server": "^0.15.1",
-        "parcel": "^2.2.1",
-        "sass": "^1.49.0",
         "bootstrap": "^5.1.3",
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "json-server": "^0.15.1",
+        "parcel": "^2.3.2",
+        "sass": "^1.49.0"
     }
 }
