--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
     "dependencies": {
         "@parcel/transformer-sass": "^2.2.1",
         "bootstrap": "^5.1.3",
+        "browserify-fs": "^1.0.0",
         "jquery": "^3.6.0",
         "json-server": "^0.15.1",
         "parcel": "^2.3.2",
         "sass": "^1.49.0"
+    },
+    "devDependencies": {
+        "buffer": "^6.0.3",
+        "events": "^3.3.0",
+        "path-browserify": "^1.0.1",
+        "process": "^0.11.10",
+        "stream-browserify": "^3.0.0",
+        "util": "^0.12.4"
     }
 }
